# predxt-orderbook-tui

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/predxt_orderbook_tui/: app.py
tests/: test_app.py
