[project]
name = "predxt-orderbook-tui"
version = "0.1.0"
description = "Terminal orderbook monitor powered by predxt"
requires-python = ">=3.12"
dependencies = [
  "predxt>=0.1.0",
  "rich>=15.0.0",
]

[project.scripts]
predxt-orderbook-tui = "predxt_orderbook_tui.app:main"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
